--- a/package.json
+++ b/package.json
@@ -1,66 +1,58 @@
+
 {
-    "name": "analytics-demo",
-    "version": "0.1.0",
-    "description": "Analytics Demo",
-    "main": "index.ts",
-    "engines": {
-        "node": "^10.13.0",
-        "npm": "^6.4.1"
+  "name": "analytics-demo",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "serve": "vue-cli-service serve",
++
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
+  },
+  "dependencies": {
+    "bulma": "^0.7.4",
+    "firebase": "^5.9.1",
+    "highcharts": "^7.1.1",
+    "highcharts-vue": "^1.2.0",
+    "vue": "^2.6.6",
+    "vue-router": "^3.0.1",
+    "vue-unicons": "^1.3.2",
+    "vuefire": "^2.0.0-alpha.21",
+    "vuex": "^3.0.1"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "^3.5.0",
+    "@vue/cli-plugin-eslint": "^3.5.0",
+    "@vue/cli-service": "^3.6.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.8.0",
+    "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
+    "vue-template-compiler": "^2.5.21"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
     },
-    "dependencies": {
-        "@moebius/http-graceful-shutdown": "^1.1.0",
-        "@sentry/node": "^4.6.6",
-        "@types/datadog-metrics": "^0.6.0",
-        "@types/deep-extend": "^0.4.31",
-        "@types/express": "^4.16.1",
-        "@types/jest": "^24.0.11",
-        "@types/joi": "^14.3.3",
-        "@types/mock-knex": "^0.3.5",
-        "@types/node": "^10.12.18",
-        "@types/node-fetch": "^2.3.3",
-        "@types/request-promise-native": "^1.0.15",
-        "@types/swagger-ui-express": "^3.0.0",
-        "body-parser": "^1.18.3",
-        "datadog-metrics": "^0.8.1",
-        "dd-trace": "^0.10.3",
-        "deep-extend": "^0.6.0",
-        "express": "^4.16.4",
-        "express-correlation-id": "^1.2.1",
-        "knex": "^0.16.3",
-        "node-fetch": "^2.5.0",
-        "pg": "^7.8.0",
-        "source-map-support": "^0.5.10",
-        "swagger-ui-express": "^4.0.2",
-        "tsoa": "^2.3.8",
-        "typescript": "^3.4.1"
-    },
-    "devDependencies": {
-        "@types/nock": "^10.0.1",
-        "jest": "^24.5.0",
-        "mock-knex": "^0.4.4",
-        "nock": "^10.0.6",
-        "ts-jest": "^24.0.0",
-        "tslint": "^5.14.0"
-    },
-    "scripts": {
-        "tsoa": "rm -f src/http/routes.ts && rm -f src/http/swagger.json && tsoa routes && tsoa swagger",
-        "build": "npm run tsoa && tsc",
-        "start": "node -r source-map-support/register --optimize_for_size --max_old_space_size=460 --gc_interval=100 build/index.js",
-        "startdev": "npm run build && API_KEY=uihtb2l902ib8aoe34gf53ak35b850b24ioua6a835d4 LOG_SETTING=simple node $NODE_DEBUG_OPTION -r source-map-support/register build/index.js",
-        "test": "npm audit && npm run lint && LOG_LEVEL=warn jest -c jest.all.config.js --runInBand --forceExit",
-        "test:unit": "LOG_LEVEL=warn jest -c jest.unit.config.js",
-        "test:integration": "LOG_LEVEL=warn jest -c jest.integration.config.js --runInBand",
-        "test:coverage": "LOG_LEVEL=warn jest -c jest.all.config.js --coverage --runInBand",
-        "migrate": "tsc && knex migrate:latest",
-        "breakerPlayground": "tsc && node build/scripts/breakerPlayground.js",
-        "prepare": "npm run build",
-        "lint": "tslint -t stylish -p .",
-        "lint:fix": "tslint -p . -t stylish --fix"
-    },
-    "repository": {
-        "type": "git",
-        "url": "https://www.github.com/danMateer/analytics-demo/"
-    },
-    "license": "ISC",
-    "homepage": "https://www.earlofscrum.com/"
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "rules": {},
+    "parserOptions": {
+      "parser": "babel-eslint"
+    }
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
