--- a/package.json
+++ b/package.json
@@ -1,191 +1,93 @@
 {
-  "name": "analytics-test",
-  "version": "0.1.0",
   "private": false,
-  "dependencies": {
-    "@babel/polyfill": "^7.4.3",
-    "@svgr/webpack": "2.4.1",
-    "apollo-cache-inmemory": "^1.3.12",
-    "apollo-client": "^2.4.8",
-    "apollo-client": "^2.5.1",
-    "apollo-link": "^1.2.6",
-    "apollo-link-error": "^1.1.5",
-    "apollo-link-http": "^1.5.9",
-    "axios": "^0.18.0",
-    "babel-plugin-named-asset-import": "^0.2.3",
-    "babel-preset-react-app": "^6.1.0",
-    "bfj": "6.1.1",
-    "case-sensitive-paths-webpack-plugin": "2.1.2",
-    "chalk": "2.4.1",
-    "core-js": "^2.6.5",
-    "css-loader": "1.0.0",
-    "dotenv": "6.0.0",
-    "dotenv-expand": "4.2.0",
-    "file-loader": "2.0.0",
-    "firebase": "^5.11.1",
-    "fork-ts-checker-webpack-plugin-alt": "0.4.14",
-    "fs-extra": "7.0.0",
-    "graphql": "^14.0.2",
-    "graphql-iso-date": "^3.6.1",
-    "graphql-tag": "^2.10.0",
-    "html-webpack-plugin": "4.0.0-alpha.2",
-    "identity-obj-proxy": "3.0.0",
-    "install": "^0.12.2",
-    "jest-pnp-resolver": "1.0.1",
-    "jest-resolve": "23.6.0",
-    "lodash": "^4.17.11",
-    "mini-css-extract-plugin": "0.4.3",
-    "moment": "^2.22.2",
-    "npm": "^6.9.0",
-    "optimize-css-assets-webpack-plugin": "5.0.1",
-    "pnp-webpack-plugin": "1.1.0",
-    "postcss-flexbugs-fixes": "4.1.0",
-    "postcss-loader": "3.0.0",
-    "postcss-preset-env": "6.0.6",
-    "postcss-safe-parser": "4.0.1",
-    "react": "^16.8.1",
-    "react-apollo": "^2.5.5",
-    "react-apollo-hooks": "^0.4.5",
-    "react-app-polyfill": "^0.1.3",
-    "react-dates": "^18.3.0",
-    "react-dev-utils": "^6.1.1",
-    "react-dom": "^16.8.1",
-    "react-measure": "^2.2.5",
-    "react-motion": "^0.5.2",
-    "react-number-format": "^4.0.7",
-    "react-router-dom": "^4.3.1",
-    "react-select": "^2.3.0",
-    "react-tooltip": "^3.4.0",
-    "react-transition-group": "^2.5.1",
-    "react-with-firebase-auth": "^1.0.2",
-    "recharts": "^1.5.0",
-    "resolve": "1.8.1",
-    "sass-loader": "7.1.0",
-    "simple-react-modal": "^0.5.1",
-    "style-loader": "0.23.0",
-    "styled-components": "^4.1.2",
-    "terser-webpack-plugin": "1.1.0",
-    "url-loader": "1.1.1",
-    "webpack": "4.19.1",
-    "webpack-dev-server": "^3.1.9",
-    "webpack-manifest-plugin": "2.0.4",
-    "workbox-webpack-plugin": "3.6.3"
-  },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "type-check": "tsc --noEmit",
-    "type-check:watch": "npm run type-check -- --watch"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts"
-    ],
-    "resolver": "jest-pnp-resolver",
-    "setupFiles": [
-      "react-app-polyfill/jsdom"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-      "<rootDir>/src/components/**/?(*.)(spec|test).{js,jsx,ts,tsx}",
-      "<rootDir>/src/helpers/**/?(*.)(spec|test).{js,jsx,ts,tsx}",
-      "<rootDir>/src/willow/**/?(*.)(spec|test).{ts,tsx}"
-    ],
-    "testEnvironment": "jsdom",
-    "testURL": "http://localhost",
-    "transform": {
-      "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy",
-      "^Willow(.*)$": "<rootDir>/src/willow/components$1",
-      "^StyleConfig(.*)$": "<rootDir>/src/willow$1",
-      "^helpers(.*)$": "<rootDir>/src/helpers$1",
-      "^testing(.*)$": "<rootDir>/src/testing$1"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "web.ts",
-      "ts",
-      "web.tsx",
-      "tsx",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ],
-    "setupFilesAfterEnv": [
-      "<rootDir>/src/testing/setupEnzyme.ts"
-    ],
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ]
+    "heroku-postbuild": "npm run prod",
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch-poll": "npm run watch -- --watch-poll",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.4.0",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.0",
-    "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.4.1",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.3.2",
-    "@sambego/storybook-state": "^1.3.4",
-    "@storybook/addon-actions": "^5.0.6",
-    "@storybook/addon-info": "^5.0.6",
-    "@storybook/addon-links": "^5.0.6",
-    "@storybook/addons": "^5.0.6",
-    "@storybook/react": "^5.0.10",
-    "@storybook/theming": "^5.0.11",
-    "@types/async": "^2.4.1",
-    "@types/enzyme": "^3.1.15",
-    "@types/enzyme-adapter-react-16": "^1.0.3",
-    "@types/graphql": "^14.0.3",
-    "@types/jest": "^23.3.14",
-    "@types/lodash": "^4.14.121",
-    "@types/node": "^11.13.2",
-    "@types/react": "^16.7.13",
-    "@types/react-dates": "^17.1.5",
-    "@types/react-dom": "16.0.11",
-    "@types/react-measure": "^2.0.5",
-    "@types/react-motion": "0.0.28",
-    "@types/react-router-dom": "^4.3.1",
-    "@types/react-select": "^2.0.17",
-    "@types/recharts": "^1.1.13",
-    "@types/storybook__addon-actions": "^3.4.2",
-    "@types/storybook__react": "^4.0.1",
-    "@types/styled-components": "^4.1.14",
-    "apollo-cache-inmemory": "^1.3.12",
-    "axios-mock-adapter": "^1.16.0",
-    "babel-core": "^7.0.0-0",
-    "babel-jest": "^24.7.1",
-    "babel-loader": "8.0.4",
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.7.1",
-    "enzyme-to-json": "^3.3.5",
-    "fs": "0.0.1-security",
-    "jest": "^24.7.1",
-    "react-docgen-typescript-loader": "^3.0.1",
-    "storybook-addon-styled-component-theme": "^1.1.1",
-    "typescript": "^3.3.4000",
-    "waait": "^1.0.2"
+    "babel-preset-react": "^6.24.1",
+    "bootstrap-sass": "^3.3.7",
+    "cross-env": "^5.0.1",
+    "css-loader": "^0.28.11",
+    "eslint": "^5.13.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-google": "^0.12.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-vue": "^5.1.0",
+    "laravel-mix": "^2.0",
+    "laravel-mix-eslint-config": "^0.1.7",
+    "laravel-profiler-client": "^1.2.0",
+    "lodash": "^4.17.4"
+  },
+  "dependencies": {
+    "@turf/turf": "^5.1.6",
+    "axios": "^0.18.0",
+    "base-64": "^0.1.0",
+    "bootstrap": "^4.1.1",
+    "bootstrap-utilities": "^4.1.3",
+    "classnames": "^2.2.6",
+    "connected-react-router": "^6.4.0",
+    "create-react-class": "^15.6.3",
+    "geojson": "^0.5.0",
+    "hammerjs": "^2.0.8",
+    "history": "^4.9.0",
+    "jquery": "^3.3.1",
+    "jquery-mask-plugin": "^1.14.15",
+    "jspdf": "^1.4.1",
+    "laravel-mix-eslint": "^0.1.2",
+    "ld-redux": "^3.2.1",
+    "leaflet": "^1.3.0",
+    "leaflet-bing-layer": "^3.3.0",
+    "leaflet-control-geocoder": "^1.6.0",
+    "leaflet-fullscreen": "^1.0.2",
+    "leaflet-geometryutil": "^0.9.0",
+    "leaflet.export": "^1.0.0",
+    "leaflet.gridlayer.googlemutant": "^0.7.0",
+    "lodash.debounce": "^4.0.8",
+    "mobile-detect": "^1.4.3",
+    "moment": "^2.20.1",
+    "polylabel": "^1.0.2",
+    "popper.js": "^1.14.3",
+    "prop-types": "^15.6.1",
+    "qs": "^6.6.0",
+    "react": "^16.8.0",
+    "react-bootstrap": "^0.32.1",
+    "react-bootstrap-date-picker": "github:pushtell/react-bootstrap-date-picker#f622dc8872dd180324ba5d3c295d009848f5814b",
+    "react-bootstrap-maskedinput": "^0.4.0",
+    "react-bootstrap-table": "^4.3.0",
+    "react-confirm": "^0.1.16",
+    "react-currency-input": "^1.3.6",
+    "react-dom": "^16.8.0",
+    "react-dropzone": "^4.2.3",
+    "react-google-maps": "^9.4.5",
+    "react-leaflet": "^2.2.1",
+    "react-leaflet-bing": "^4.1.0",
+    "react-loader-spinner": "^2.2.0",
+    "react-places-autocomplete": "^7.2.0",
+    "react-redux": "^6.0.0",
+    "react-router-bootstrap": "^0.25.0",
+    "react-router-dom": "^5.0.0",
+    "react-select": "^1.2.1",
+    "react-simple-file-input": "^2.0.1",
+    "react-stripe-elements": "^3.0.0",
+    "react-toastify": "^3.2.1",
+    "react-trello": "^1.31.4",
+    "reactour": "^1.13.3",
+    "redux": "^4.0.1",
+    "redux-form": "^8.2.1",
+    "redux-form-normalize": "^0.1.2",
+    "redux-thunk": "^2.3.0",
+    "sass-loader": "^7.0.1",
+    "styled-components": "^4.0.0",
+    "validate.js": "^0.12.0"
   }
 }
