--- a/package.json
+++ b/package.json
@@ -1,93 +1,44 @@
 {
-  "private": false,
+  "name": "analytics-demo",
+  "version": "0.2.1",
   "scripts": {
-    "heroku-postbuild": "npm run prod",
-    "dev": "npm run development",
-    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch-poll": "npm run watch -- --watch-poll",
-    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "build": "yarn build:production",
+    "build:development": "NODE_ENV=development webpack",
+    "build:production": "NODE_ENV=production webpack",
+    "build:watch": "yarn build:development --watch",
+    "lint": "yarn lint:js && yarn lint:ts && yarn lint:tsc",
+    "lint:fix": "yarn lint:js --fix",
+    "lint:fixall": "yarn lint:js --fix && yarn lint:ts --fix",
+    "lint:js": "eslint --ignore-path ../../../.gitignore --ext js .",
+    "lint:ts": "tslint -c ../../../tslint.json --project tsconfig.json 'src/**/*.ts' 'src/**/*.tsx'",
+    "lint:tsc": "tsc --project tsconfig.json",
+    "sandbox": "NODE_ENV=development webpack-dev-server --hot --open",
+    "start": "yarn sandbox",
+    "start:localenv": "yarn clean:localenv && yarn boot:localenv && yarn sandbox",
+    "test": "jest",
+    "test:watch": "yarn test --watch"
+  },
+  "files": [
+    "public/"
+  ],
+  "dependencies": {
+    "assessment-lib": "0.25.9"
   },
   "devDependencies": {
-    "babel-preset-react": "^6.24.1",
-    "bootstrap-sass": "^3.3.7",
-    "cross-env": "^5.0.1",
-    "css-loader": "^0.28.11",
-    "eslint": "^5.13.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-google": "^0.12.0",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-vue": "^5.1.0",
-    "laravel-mix": "^2.0",
-    "laravel-mix-eslint-config": "^0.1.7",
-    "laravel-profiler-client": "^1.2.0",
-    "lodash": "^4.17.4"
+    "@types/plupload": "2.0.6",
+    "classnames": "2.2.5",
+    "core-js": "3.1.3",
+    "design-system-components": "2.15.0",
+    "design-system-components": "2.19.1",
+    "design-system-organisms": "1.3.1",
+    "lodash": "4.17.10",
+    "mobx": "4.5.0",
+    "mobx-react": "5.4.4",
+    "node-polyglot": "2.3.0",
+    "plupload": "2.3.6",
+    "react": "16.4.2",
+    "react-dom": "16.4.2",
+    "whatwg-fetch": "2.0.4"
   },
-  "dependencies": {
-    "@turf/turf": "^5.1.6",
-    "axios": "^0.18.0",
-    "base-64": "^0.1.0",
-    "bootstrap": "^4.1.1",
-    "bootstrap-utilities": "^4.1.3",
-    "classnames": "^2.2.6",
-    "connected-react-router": "^6.4.0",
-    "create-react-class": "^15.6.3",
-    "geojson": "^0.5.0",
-    "hammerjs": "^2.0.8",
-    "history": "^4.9.0",
-    "jquery": "^3.3.1",
-    "jquery-mask-plugin": "^1.14.15",
-    "jspdf": "^1.4.1",
-    "laravel-mix-eslint": "^0.1.2",
-    "ld-redux": "^3.2.1",
-    "leaflet": "^1.3.0",
-    "leaflet-bing-layer": "^3.3.0",
-    "leaflet-control-geocoder": "^1.6.0",
-    "leaflet-fullscreen": "^1.0.2",
-    "leaflet-geometryutil": "^0.9.0",
-    "leaflet.export": "^1.0.0",
-    "leaflet.gridlayer.googlemutant": "^0.7.0",
-    "lodash.debounce": "^4.0.8",
-    "mobile-detect": "^1.4.3",
-    "moment": "^2.20.1",
-    "polylabel": "^1.0.2",
-    "popper.js": "^1.14.3",
-    "prop-types": "^15.6.1",
-    "qs": "^6.6.0",
-    "react": "^16.8.0",
-    "react-bootstrap": "^0.32.1",
-    "react-bootstrap-date-picker": "github:pushtell/react-bootstrap-date-picker#f622dc8872dd180324ba5d3c295d009848f5814b",
-    "react-bootstrap-maskedinput": "^0.4.0",
-    "react-bootstrap-table": "^4.3.0",
-    "react-confirm": "^0.1.16",
-    "react-currency-input": "^1.3.6",
-    "react-dom": "^16.8.0",
-    "react-dropzone": "^4.2.3",
-    "react-google-maps": "^9.4.5",
-    "react-leaflet": "^2.2.1",
-    "react-leaflet-bing": "^4.1.0",
-    "react-loader-spinner": "^2.2.0",
-    "react-places-autocomplete": "^7.2.0",
-    "react-redux": "^6.0.0",
-    "react-router-bootstrap": "^0.25.0",
-    "react-router-dom": "^5.0.0",
-    "react-select": "^1.2.1",
-    "react-simple-file-input": "^2.0.1",
-    "react-stripe-elements": "^3.0.0",
-    "react-toastify": "^3.2.1",
-    "react-trello": "^1.31.4",
-    "reactour": "^1.13.3",
-    "redux": "^4.0.1",
-    "redux-form": "^8.2.1",
-    "redux-form-normalize": "^0.1.2",
-    "redux-thunk": "^2.3.0",
-    "sass-loader": "^7.0.1",
-    "styled-components": "^4.0.0",
-    "validate.js": "^0.12.0"
-  }
+  "license": "UNLICENSED"
 }
