--- a/package.json
+++ b/package.json
@@ -1,44 +1,311 @@
 {
   "name": "analytics-demo",
-  "version": "0.2.1",
-  "scripts": {
-    "build": "yarn build:production",
-    "build:development": "NODE_ENV=development webpack",
-    "build:production": "NODE_ENV=production webpack",
-    "build:watch": "yarn build:development --watch",
-    "lint": "yarn lint:js && yarn lint:ts && yarn lint:tsc",
-    "lint:fix": "yarn lint:js --fix",
-    "lint:fixall": "yarn lint:js --fix && yarn lint:ts --fix",
-    "lint:js": "eslint --ignore-path ../../../.gitignore --ext js .",
-    "lint:ts": "tslint -c ../../../tslint.json --project tsconfig.json 'src/**/*.ts' 'src/**/*.tsx'",
-    "lint:tsc": "tsc --project tsconfig.json",
-    "sandbox": "NODE_ENV=development webpack-dev-server --hot --open",
-    "start": "yarn sandbox",
-    "start:localenv": "yarn clean:localenv && yarn boot:localenv && yarn sandbox",
-    "test": "jest",
-    "test:watch": "yarn test --watch"
-  },
-  "files": [
-    "public/"
-  ],
+  "version": "2.64.0",
+  "description": "Checklist and Inspection manager",
+  "keywords": [],
   "dependencies": {
-    "assessment-lib": "0.25.9"
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@mewe/coinspect-lastpass": "~1.0.4",
+    "@mewe/mewe-email-agent": "0.1.12",
+    "@mewe/mewe-s3fy": "~0.1.4",
+    "@mewe/sails": "^0.12.5",
+    "assert": "~1.3.0",
+    "async": "~2.0.1",
+    "auth": "latest",
+    "aws-sdk": "~2.224.1",
+    "aws-xray-sdk": "~1.1.1",
+    "bcryptjs": "~2.4.3",
+    "bindings": "~1.2.1",
+    "bluebird": "latest",
+    "body-parser": "~1.10.1",
+    "coffeescript": "latest",
+    "connect-redis": "3.1.0",
+    "connect-timeout": "~1.7.0",
+    "continuation-local-storage": "~3.2.0",
+    "convict": "~4.4.0",
+    "correlation-id": "~2.1.1",
+    "cors": "~2.8.1",
+    "csvtojson": "1.1.12",
+    "decree": "latest",
+    "dotenv": "^8.0.0",
+    "elasticsearch": "~14.2.2",
+    "expect.js": "~0.3.1",
+    "express": "~4.16.3",
+    "express-partials": "0.3.0",
+    "express-useragent": "~1.0.12",
+    "findup-sync": "latest",
+    "firebase-admin": "~5.12.0",
+    "fs-extra": "~0.30.0",
+    "fs-extra-promise": "~0.4.1",
+    "graceful-fs": "~4.1.2",
+    "grunt": "~1.0.1",
+    "grunt-ngdocs": "^0.2.11",
+    "hiredis": "~0.5.0",
+    "hmacsha1": "~1.0.0",
+    "http-aws-es": "~3.1.3",
+    "include-all": "~0.1.3",
+    "influx": "~5.0.7",
+    "jade": "~1.7.0",
+    "jasmine-core": "^3.3.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "jquery": "~2.2.1",
+    "json2csv": "3.7.1",
+    "jsonwebtoken": "^8.5.1",
+    "karma-jasmine": "^2.0.1",
+    "knex": "~0.12.9",
+    "kue": "~0.11.5",
+    "libpq": "~1.8.7",
+    "lodash": "~4.14.2",
+    "md5": "~2.2.1",
+    "mkdirp": "~0.5.1",
+    "moment": "2.18.0",
+    "moment-duration-format": "^2.2.2",
+    "moment-timezone": "~0.5.11",
+    "ncp": "~2.0.0",
+    "ngreact": "^0.5.2",
+    "ngrok": "^3.1.1",
+    "node-dm": "2.1.1",
+    "node-schedule": "~1.1.1",
+    "node-uuid": "1.4.7",
+    "node-zip": "~1.1.1",
+    "nopt": "latest",
+    "numeral": "~1.5.3",
+    "on-finished": "~2.3.0",
+    "optimist": "latest",
+    "owasp-password-strength-test": "~1.3.0",
+    "passport": "latest",
+    "passport-custom": "^1.0.5",
+    "passport-local": "latest",
+    "passport-saml": "~0.15.0",
+    "password-generator": "~2.1.0",
+    "pg": "~6.4.2",
+    "pg-native": "~2.2.0",
+    "pretty-error": "~2.0.2",
+    "prop-types": "^15.7.2",
+    "protractor-beautiful-reporter": "~0.5.0",
+    "raven": "~2.5.0",
+    "rc": "~1.1.6",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react2angular": "^4.0.6",
+    "redis": "~2.6.2",
+    "request": "~2.81.0",
+    "request-promise": "~4.1.0",
+    "require-directory": "~2.1.0",
+    "sails-generate-auth": "~0.3.1",
+    "sails-hook-dotenv": "~0.1.1",
+    "sails-postgresql": "~0.11.4",
+    "sails-redis": "~0.10.5",
+    "sequelize": "~3.33.0",
+    "sequelize-cli": "~2.4.0",
+    "sequelize-to-json": "~0.10.2",
+    "sinon": "^5.0.1-next.1",
+    "skipper": "~0.6.4",
+    "slurp": "~0.6.2",
+    "socket.io-client": "~1.4.8",
+    "tldjs": "~2.2.0",
+    "tmp": "0.0.28",
+    "toposort-class": "~1.0.1",
+    "uglify-es": "github:mishoo/UglifyJS2#harmony",
+    "unzip": "~0.1.11",
+    "uuid": "~2.0.2",
+    "waterline": "~0.12.2",
+    "winston": "~2.3.1",
+    "winston-logstash": "~0.4.0",
+    "xss": "~1.0.3"
   },
+  "scripts": {
+    "start": "node --harmony app.js",
+    "start:feature:server": "forever start -c /bin/bash ./test/feature/server",
+    "debug": "node debug app.js",
+    "dev": "nodemon app.js -- --environment=development",
+    "testing": "NODE_ENV=testing npm start",
+    "build": "node_modules/.bin/grunt build",
+    "build:views": "node scripts/build-views.js",
+    "develop": "./dev",
+    "develop:console": "node app.js",
+    "nsolid": "nsolid app.js",
+    "test": "echo 'please use either npm run test:server, test:frontend or test:frontend:ci' && exit 1",
+    "test:ipm:server": "NODE_ENV=testing mocha --opts ./packages/mocha.opts",
+    "test:ipm:frontend": "TEST_IPM_PACKAGES=true karma start",
+    "test:ipm:frontend:ci": "TEST_IPM_PACKAGES=true karma start --single-run",
+    "test:ipm:feature": "TEST_IPM_PACKAGES=true npm run test:core:feature ",
+    "test:core:server": "NODE_ENV=testing mocha --opts ./test/mocha.opts",
+    "test:core:config": "NODE_ENV=testing mocha --opts ./test/mocha.config.opts",
+    "test:core:controllers": "NODE_ENV=testing mocha --opts ./test/mocha.controllers.opts",
+    "test:core:integration": "NODE_ENV=testing mocha --opts ./test/mocha.integration.opts",
+    "test:core:orm": "NODE_ENV=testing mocha --opts ./test/mocha.orm.opts",
+    "test:core:services": "NODE_ENV=testing mocha --opts ./test/mocha.services.opts",
+    "test:core:frontend": "npm run build && karma start && karma start karma.webpack.config.js --single-run=true",
+    "test:core:frontend:agent": "npm run build && USER=agent karma start",
+    "test:core:frontend:ci": "npm run build && karma start --single-run",
+    "test:core:feature": "wdio wdio.standalone.conf.js",
+    "test:server": "npm run test:core:server && npm run test:ipm:server",
+    "test:frontend": "npm run test:core:frontend",
+    "test:frontend:ci": "npm run test:core:frontend:ci",
+    "test:jest:ci": "./node_modules/.bin/jest",
+    "test:feature": "npm run test:core:feature && npm run test:ipm:feature",
+    "test:selenium": "./test/feature/test",
+    "test:all": "npm run test:lint && npm run test:server && npm run build && npm run test:frontend:ci && USER=agent npm run test:frontend:ci && npm run test:selenium",
+    "test:lint": "eslint --fix $(git diff-tree --no-commit-id --name-only -r HEAD~0)",
+    "test:webpack": "./node_modules/.bin/karma start karma.webpack.config.js",
+    "test:webpack:ci": "./node_modules/.bin/karma start karma.webpack.config.js --single-run=true",
+    "coffeelint": "coffeelint api/ packages/ assets/",
+    "sequelize": "sequelize",
+    "migrate:new": "sequelize migration:create",
+    "migrate:up": "sequelize db:migrate",
+    "migrate:undo": "sequelize db:migrate:undo",
+    "migration-sync": "node scripts/migration-sync.js",
+    "base:develop": "./build-base.sh develop",
+    "base:master": "./build-base.sh master",
+    "jsdoc:start": "nodemon -x 'jsdoc -c jsdoc.json'",
+    "font-sync": "node scripts/s3.js",
+    "deploy:assets": "node scripts/deploy-assets.js",
+    "protractor": "protractor test/e2e/protractor.conf.js",
+    "seed:up": "sequelize db:seed:all",
+    "seed:undo": "sequelize db:seed:undo:all",
+    "permissions:load": "node scripts/load-permissions.js"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix"
+    ]
+  },
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/mac/ams.git"
+  },
+  "author": "CoInspect OneTeam",
+  "license": "",
   "devDependencies": {
-    "@types/plupload": "2.0.6",
-    "classnames": "2.2.5",
-    "core-js": "3.1.3",
-    "design-system-components": "2.15.0",
-    "design-system-components": "2.19.1",
-    "design-system-organisms": "1.3.1",
-    "lodash": "4.17.10",
-    "mobx": "4.5.0",
-    "mobx-react": "5.4.4",
-    "node-polyglot": "2.3.0",
-    "plupload": "2.3.6",
-    "react": "16.4.2",
-    "react-dom": "16.4.2",
-    "whatwg-fetch": "2.0.4"
+    "@babel/core": "~7.1.6",
+    "@babel/polyfill": "~7.0.0",
+    "@babel/preset-env": "~7.1.6",
+    "@babel/preset-react": "^7.0.0",
+    "angular": "~1.4.14",
+    "angular-mocks": "~1.4.14",
+    "angular-scroll": "~1.0.2",
+    "babel-core": "~7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "~8.0.4",
+    "babel-plugin-angularjs-annotate": "~0.9.0",
+    "babel-preset-es2015": "~6.24.1",
+    "babel-register": "~6.24.0",
+    "bower": "~1.3.1",
+    "casual": "~1.5.11",
+    "chai": "~3.5.0",
+    "chai-as-promised": "~6.0.0",
+    "chai-iterator": "~1.1.1",
+    "cheerio": "~1.0.0-rc.2",
+    "coffeelint": "~1.15.7",
+    "css-loader": "~1.0.1",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.3.5",
+    "eslint": "~3.19.0",
+    "eslint-config-airbnb": "~10.0.1",
+    "eslint-plugin-import": "~1.16.0",
+    "eslint-plugin-jsx-a11y": "~2.2.3",
+    "eslint-plugin-mocha": "4.9.0",
+    "eslint-plugin-react": "^7.14.2",
+    "eyeglass": "~1.6.0",
+    "eyeglass-restyle": "^1.2.0",
+    "firebase": "~5.2.0",
+    "forever": "~0.15.3",
+    "grunt-autoprefixer": "~3.0.4",
+    "grunt-babel": "~8.0.0",
+    "grunt-contrib-clean": "~1.0.0",
+    "grunt-contrib-coffee": "~1.0.0",
+    "grunt-contrib-concat": "~1.0.1",
+    "grunt-contrib-copy": "~1.0.0",
+    "grunt-contrib-cssmin": "~1.0.2",
+    "grunt-contrib-jade": "~1.0.0",
+    "grunt-contrib-jst": "~1.0.0",
+    "grunt-contrib-uglify": "~2.3.0",
+    "grunt-contrib-watch": "~1.0.0",
+    "grunt-jsdoc": "~2.1.0",
+    "grunt-newer": "~1.3.0",
+    "grunt-sails-linker": "~0.10.1",
+    "grunt-sass": "~2.0.0",
+    "grunt-sync": "~0.6.2",
+    "grunt-webpack": "~3.1.3",
+    "husky": "~0.13.3",
+    "jest": "^23.6.0",
+    "jsdoc": "~3.4.3",
+    "karma": "~1.7.1",
+    "karma-babel-preprocessor": "~6.0.1",
+    "karma-chai": "~0.1.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coffee-preprocessor": "~1.0.1",
+    "karma-junit-reporter": "~1.1.0",
+    "karma-mocha": "~1.1.1",
+    "karma-phantomjs-launcher": "~1.0.4",
+    "karma-polyfill": "~1.0.0",
+    "karma-sinon-chai": "~1.2.3",
+    "karma-sourcemap-loader": "~0.3.7",
+    "karma-spec-reporter": "0.0.26",
+    "karma-webpack": "~3.0.5",
+    "lint-staged": "3.4.2",
+    "list-directory-contents": "0.0.3",
+    "mini-css-extract-plugin": "^0.7.0",
+    "mocha": "~3.5.3",
+    "mocha-multi": "~1.0.1",
+    "mock-aws": "~1.2.3",
+    "ngreact": "^0.5.2",
+    "nightwatch": "~0.9.6",
+    "nock": "~9.0.2",
+    "node-sass": "^4.10.0",
+    "nodemon": "~1.10.0",
+    "null-loader": "^2.0.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "phantomjs-prebuilt": "~2.1.14",
+    "pm2": "~1.1.3",
+    "protractor": "~5.4.1",
+    "protractor-image-comparison": "~1.5.1",
+    "puppeteer": "^1.11.0",
+    "raw-loader": "~0.5.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "s3": "~4.4.0",
+    "sails-hook-autoreload": "~0.13.2",
+    "sass-loader": "~7.1.0",
+    "sinon-chai": "~3.0.0",
+    "style-loader": "~0.23.1",
+    "supertest": "~2.0.0",
+    "supertest-as-promised": "~4.0.0",
+    "terser-webpack-plugin": "^1.3.0",
+    "uglify-js": "^3.4.9",
+    "v8-profiler": "latest",
+    "validate-arguments": "0.0.8",
+    "wdio-junit-reporter": "~0.1.0",
+    "wdio-mocha-framework": "~0.5.10",
+    "wdio-selenium-standalone-service": "0.0.5",
+    "wdio-spec-reporter": "0.0.3",
+    "webdriverio": "~4.2.3",
+    "webpack": "~4.26.0"
   },
-  "license": "UNLICENSED"
+  "resolutions": {
+    "babel-core": "7.0.0-bridge.0",
+    "angular": "~1.4.14"
+  },
+  "browserslist": [
+    "> 2%",
+    "not dead"
+  ],
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
+    "setupFiles": [
+      "./assets/react/reactTestRunner.js"
+    ],
+    "testMatch": [
+      "**/assets/react/**/*.test.js?(x)"
+    ],
+    "transform": {
+      "^.+\\.jsx?$": "<rootDir>/node_modules/babel-jest"
+    }
+  },
+  "sideEffects": true
 }
