--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.64.0",
   "description": "analytics angular ionic",
   "keywords": [],
- "dependencies": {
+  "dependencies": {
         "@moebius/http-graceful-shutdown": "^1.1.0",
         "@newrelic/native-metrics": "^4.1.0",
         "@sentry/node": "^4.6.6",
@@ -41,7 +41,7 @@
         "tsoa": "^2.3.8",
         "twilio": "^3.33.1",
         "typescript": "^3.4.1",
-        "url-regex": "^5.0.0",
+        "url-regex": "^5.0.0"
     },
     "devDependencies": {
         "@stryker-mutator/core": "^2.0.0",
@@ -56,7 +56,7 @@
         "nock": "^10.0.6",
         "stryker-cli": "^1.0.0",
         "ts-jest": "^24.0.0",
-        "tslint": "^5.14.0",
+        "tslint": "^5.14.0"
     },
   "resolutions": {
     "babel-core": "7.0.0-bridge.0",
