--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "@types/nodemailer": "^3.1.3",
         "angularjs-datepicker": "^2.1.23",
         "aws-sdk": "^2.192.0",
+        "async": "^2.0.1",
         "base64url": "^3.0.0",
         "bcrypt-nodejs": "0.0.3",
         "body-parser": "^1.18.3",
